  19. (Tech) numerous gun and shield types created -- most of them templates for a murder-motel-type game
  20. PRIVATE setting in coffeemud.ini expanded to allow moving players and area objects between hosts.
  21. You can now YELL in a direction, which expands by 1 the number of rooms you are heard in, and which way.
  22. IMPORT now accepts zip files containing *.cmare files.
//TODO: make personal sensor systems
//TODO: make the tech install skill!!!
//TODO: make components interact badly based on techlevel -- generators/batteries affect things they power, software affects controlled.
//      this encourages equality in tech level, which will bleed out into the comparative components (weapons, shields)
//TODO: make enviro control systems
//TODO: retest private libs, private dbtables, private classes, private area objects, private players
//TODO: some way to reposition planets? esp relative to nearby ones
//TODO: create solar systems, esp stars.  planets should be thin areas, solar systems are triggered to load when players fly near enough. 
//TODO: make ship sensor systems
//TODO: add electronics to guides
//TODO: add electronics to MG
//TODO: http://games.groups.yahoo.com/group/coffeemud skip=1885,2881,2953,3274,15908,15914,16267
# Build 5.8.0.1 Release 7/22/2013
  Bug fix release -- removed Go-Ahead chars for tinyfugue
# Build 5.8.0 Release 7/21/2013
   1. CoffeeMud and MiniWebServer are now integrated -- this means a much faster and better web service all around.
   ^^^Check out the altered WebServer guide, and make sure you integrate the pub. ini, admin.ini, and common.ini if you customized them.
   2. Character Classes now use formulas for mana, movement, and hit point gains/losses.
   3. Character Class race/stat requirements can now be modified separately from qualifications mask.  Race qualifications shown in help now.
   4. Changed the wysiwyg forum editor to one that's also chrome compatible (nicEdit)