@@ -21,6 +21,8 @@
   20. PRIVATE setting in coffeemud.ini expanded to allow moving players and area objects between hosts.
   21. You can now YELL in a direction, which expands by 1 the number of rooms you are heard in, and which way.
   22. IMPORT now accepts zip files containing *.cmare files.
+  23. Say command: if a player speaks same language as person being addressed is speaking, they will try to speak it.  
+      Also, untargeted speaking, when only one other person is in the room, will assume to be addressing them. 
 //TODO: make personal sensor systems
 //TODO: make the tech install skill!!!
 //TODO: make components interact badly based on techlevel -- generators/batteries affect things they power, software affects controlled.
